--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -66,41 +66,41 @@ unused_symbols = \
 	-u $(SYMPREFIX)gimp_drawable_stroke_vectors
 
 GTKDOC_LIBS = \
-	$(unused_symbols)						\
-        $(top_builddir)/app/app_procs.o					\
-        $(top_builddir)/app/batch.o					\
-        $(top_builddir)/app/errors.o					\
-        $(top_builddir)/app/units.o					\
-        $(top_builddir)/app/config/libappconfig.a			\
-        $(top_builddir)/app/gui/libappgui.a				\
-        $(top_builddir)/app/display/libappdisplay.a			\
-        $(top_builddir)/app/tools/libapptools.a				\
-        $(top_builddir)/app/widgets/libappwidgets.a			\
-        $(top_builddir)/app/core/libappcore.a				\
-        $(top_builddir)/app/pdb/libapppdb.a				\
-        $(top_builddir)/app/paint/libapppaint.a				\
-        $(top_builddir)/app/xcf/libappxcf.a				\
-        $(top_builddir)/app/text/libapptext.a				\
-        $(top_builddir)/app/vectors/libappvectors.a			\
-        $(top_builddir)/app/file/libappfile.a				\
-        $(top_builddir)/app/plug-in/libappplug-in.a			\
-        $(top_builddir)/app/paint-funcs/libapppaint-funcs.a		\
-        $(top_builddir)/app/composite/libappcomposite.a			\
-        $(top_builddir)/app/base/libappbase.a				\
-        $(top_builddir)/libgimpcolor/libgimpcolor-$(LT_RELEASE).la      \
-        $(top_builddir)/libgimpmath/libgimpmath-$(LT_RELEASE).la        \
-        $(top_builddir)/libgimpbase/libgimpbase-$(LT_RELEASE).la        \
-        $(top_builddir)/libgimpmodule/libgimpmodule-$(LT_RELEASE).la    \
-        $(top_builddir)/libgimpthumb/libgimpthumb-$(LT_RELEASE).la    \
-        $(top_builddir)/libgimpwidgets/libgimpwidgets-$(LT_RELEASE).la  \
-        $(GTK_LIBS)                                                     \
-        $(LIBART_LIBS)                                                  \
-        $(PANGOFT2_LIBS)                                                \
-        $(FONTCONFIG_LIBS)                                              \
-        $(FREETYPE_LIBS)                                                \
-        $(GIMP_THREAD_LIBS)                                             \
-        $(GIMP_MP_LIBS)                                                 \
-        $(INTLLIBS)                                                     \
+	$(unused_symbols)						     \
+        $(top_builddir)/app/app_procs.o					     \
+        $(top_builddir)/app/batch.o					     \
+        $(top_builddir)/app/errors.o					     \
+        $(top_builddir)/app/units.o					     \
+        $(top_builddir)/app/config/libappconfig.a			     \
+        $(top_builddir)/app/gui/libappgui.a				     \
+        $(top_builddir)/app/display/libappdisplay.a			     \
+        $(top_builddir)/app/tools/libapptools.a				     \
+        $(top_builddir)/app/widgets/libappwidgets.a			     \
+        $(top_builddir)/app/core/libappcore.a				     \
+        $(top_builddir)/app/pdb/libapppdb.a				     \
+        $(top_builddir)/app/paint/libapppaint.a				     \
+        $(top_builddir)/app/xcf/libappxcf.a				     \
+        $(top_builddir)/app/text/libapptext.a				     \
+        $(top_builddir)/app/vectors/libappvectors.a			     \
+        $(top_builddir)/app/file/libappfile.a				     \
+        $(top_builddir)/app/plug-in/libappplug-in.a			     \
+        $(top_builddir)/app/paint-funcs/libapppaint-funcs.a		     \
+        $(top_builddir)/app/composite/libappcomposite.a			     \
+        $(top_builddir)/app/base/libappbase.a				     \
+        $(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la     \
+        $(top_builddir)/libgimpmath/libgimpmath-$(GIMP_API_VERSION).la       \
+        $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la       \
+        $(top_builddir)/libgimpmodule/libgimpmodule-$(GIMP_API_VERSION).la   \
+        $(top_builddir)/libgimpthumb/libgimpthumb-$(GIMP_API_VERSION).la     \
+        $(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la \
+        $(GTK_LIBS)                                                          \
+        $(LIBART_LIBS)                                                       \
+        $(PANGOFT2_LIBS)                                                     \
+        $(FONTCONFIG_LIBS)                                                   \
+        $(FREETYPE_LIBS)                                                     \
+        $(GIMP_THREAD_LIBS)                                                  \
+        $(GIMP_MP_LIBS)                                                      \
+        $(INTLLIBS)                                                          \
         $(REGEXREPL)
 
 GTKDOC_CC = $(LIBTOOL) --mode=compile $(CC)
