--- a/libgimpbase/Makefile.am
+++ b/libgimpbase/Makefile.am
@@ -9,11 +9,11 @@ gimpbase_def = gimpbase.def
 libgimpbase_export_symbols = -export-symbols gimpbase.def
 
 install-libtool-import-lib:
-	$(INSTALL) .libs/libgimpbase-$(LT_RELEASE).dll.a $(DESTDIR)$(libdir)
+	$(INSTALL) .libs/libgimpbase-$(GIMP_API_VERSION).dll.a $(DESTDIR)$(libdir)
 	$(INSTALL) gimpbase.def $(DESTDIR)$(libdir)
 
 uninstall-libtool-import-lib:
-	-rm $(DESTDIR)$(libdir)/libgimpbase-$(LT_RELEASE).dll.a
+	-rm $(DESTDIR)$(libdir)/libgimpbase-$(GIMP_API_VERSION).dll.a
 	-rm $(DESTDIR)$(libdir)/gimpbase.def
 else
 install-libtool-import-lib:
@@ -21,23 +21,23 @@ uninstall-libtool-import-lib:
 endif
 
 if MS_LIB_AVAILABLE
-noinst_DATA = gimpbase-$(LT_RELEASE).lib
+noinst_DATA = gimpbase-$(GIMP_API_VERSION).lib
 
 install-ms-lib:
-	$(INSTALL) gimpbase-$(LT_RELEASE).lib $(DESTDIR)$(libdir)
+	$(INSTALL) gimpbase-$(GIMP_API_VERSION).lib $(DESTDIR)$(libdir)
 
 uninstall-ms-lib:
-	-rm $(DESTDIR)$(libdir)/gimpbase-$(LT_RELEASE).lib
+	-rm $(DESTDIR)$(libdir)/gimpbase-$(GIMP_API_VERSION).lib
 
-gimpbase-@LT_RELEASE@.lib: gimpbase.def
-	lib -name:libgimpbase-$(LT_RELEASE)-@LT_CURRENT_MINUS_AGE@.dll -def:gimpbase.def -out:$@
+gimpbase-@GIMP_API_VERSION@.lib: gimpbase.def
+	lib -name:libgimpbase-$(GIMP_API_VERSION)-@LT_CURRENT_MINUS_AGE@.dll -def:gimpbase.def -out:$@
 
 else
 install-ms-lib:
 uninstall-ms-lib:
 endif
 
-libgimpbaseincludedir = $(includedir)/gimp-$(LT_RELEASE)/libgimpbase
+libgimpbaseincludedir = $(includedir)/gimp-$(GIMP_API_VERSION)/libgimpbase
 
 AM_CPPFLAGS = \
 	-DPREFIX=\""$(prefix)"\"		\
@@ -108,8 +108,8 @@ libgimpbaseinclude_HEADERS = \
 	gimputils.h
 
 libgimpbase_1_3_la_LDFLAGS = \
-	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)	\
-	$(no_undefined) 					\
+	-version-info $(LT_VERSION_INFO)	\
+	$(no_undefined) 			\
 	$(libgimpbase_export_symbols)
 
 libgimpbase_1_3_la_DEPENDENCIES = $(gimpbase_def)
@@ -119,4 +119,3 @@ libgimpbase_1_3_la_LIBADD = $(GLIB_LIBS)
 install-data-local: install-ms-lib install-libtool-import-lib
 
 uninstall-local: uninstall-ms-lib uninstall-libtool-import-lib
-
