--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,23 +1,23 @@
 ## Process this file with automake to produce Makefile.in
 
 man_MANS = \
-	gimp-$(LT_RELEASE).1		\
-	gimptool-2.0.1			\
-	gimprc-$(LT_RELEASE).5		\
-	gimp-remote-$(LT_RELEASE).1
+	gimp-$(GIMP_APP_VERSION).1		\
+	gimptool-$(GIMP_TOOL_VERSION).1		\
+	gimprc-$(GIMP_APP_VERSION).5		\
+	gimp-remote-$(GIMP_APP_VERSION).1
 
 EXTRA_DIST = \
-	gimp-$(LT_RELEASE).1.in		\
-	gimprc-$(LT_RELEASE).5.in	\
-	gimptool-2.0.1.in		\
-	gimp-remote-$(LT_RELEASE).1.in	\
-	Wilber.svg			\
-	Wilber.xcf.gz			\
-	Wilber.xcf.gz.README		\
-	Wilber_Construction_Kit.xcf.gz	\
-	gimp.txt			\
-	keybindings.txt 		\
-	quick_reference.ps 		\
+	gimp-$(GIMP_APP_VERSION).1.in		\
+	gimprc-$(GIMP_APP_VERSION).5.in		\
+	gimptool-$(GIMP_TOOL_VERSION).1.in	\
+	gimp-remote-$(GIMP_API_VERSION).1.in	\
+	Wilber.svg				\
+	Wilber.xcf.gz				\
+	Wilber.xcf.gz.README			\
+	Wilber_Construction_Kit.xcf.gz		\
+	gimp.txt				\
+	keybindings.txt 			\
+	quick_reference.ps 			\
 	quick_reference.tar.gz
 
 install-data-hook:
